--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./src/index.js",
+    "start": "nodemon ./src/index.js",
     "dev": "index.js"
   },
   "keywords": [],
